--- a/style.css
+++ b/style.css
@@ -1,20 +1,145 @@
-body {
-    background-color: rgb(27, 25, 36);
-    color: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+html, body {
+    background-color: #EAEBED;
+    color: #006989;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
 }
+
+h1 {
+    font-size: 2em;
+    color: #006989;
+}
+
+p {
+    font-size: 1.2em;
+}
+
+textarea, input {
+    font-size: 1.2em;
+    font-family: "Poppins", sans-serif;
+    border-color: none ;
+    padding: 15px;
+    resize: none;
+    border-color: transparent;
+}
+
+textarea:focus, input:focus {
+    border-color: #006989 ;
+    border-radius: 10px ;
+
+}
+
+/* input {
+    font-size: 1.2rem;
+    border-radius: 0.3em;
+    padding: 10px;
+} */
+
+button {
+    position: relative;
+    display: inline-block;
+    padding: 5px 10px;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: #006989;
+    background: #fff;
+    cursor: pointer;
+    transition: ease-in-out 0.5s;
+    border: 2px solid #006989;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #006989;
+    font-size: 1em;
+  }
+  
+button:hover {
+    color: white;
+    box-shadow: inset 0 -100px 0 0 #006989;
+  }
+
+
+.flex-space-even {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.flex-space-even input {
+    width: 35% !important; 
+}
+
+#publish-button {
+    width: 30% !important;
+    background: #006989;
+    color: #EAEBED;
+}
+
+#publish-button:hover {
+    width: 30% !important;
+    background: #EAEBED !important;
+    color: #006989 !important;
+    box-shadow: inset 0 -100px 0 0 #EAEBED;
+
+}
+
+#main-content {
+    margin: auto;
+    width: 60%;
+}
+
+/* .ta-center {
+    text-align: center;
+} */
 
 #text-input {
     height: 200px;
-    width: 500px;
+    width: 94%;
     margin: 10px 0px;
+    border-style: solid;
+}
+  
+#input-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
-input {
-    font-size: 18px;
+#input-container div {
+    width: 100%;
 }
 
 #post-lists { 
     display: flex;
-    flex-direction: column-reverse;
+    flex-wrap: wrap-reverse;
+    padding: 0%;
+}
+
+li div {
+    /* display: flex;
+    flex-direction: column; */
+    background-color: #fff;
+    padding: 15px;
+    min-width: 400px;
+    border-radius: 10px;
+    margin: 10px 10px 10px 0px;
+}
+
+li h3 {
+    font-size: 1.4em;
+}
+
+li h4 {
+    font-size: 1.2em;
+}
+
+li p {
+    font-size: 1em;
+}
+
+ul {
+    list-style-type: none;
+    color: black;
+    /* padding: 20px; */
 }
