--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ button {
     border-radius: 10px;
     box-shadow: inset 0 0 0 0 #006989;
     font-size: 1em;
+    user-select: none; /* Standard syntax */
   }
   
 button:hover {
@@ -66,6 +67,7 @@ button:hover {
 
 .flex-space-even input {
     width: 35% !important; 
+    margin: 0px 5px 0px 0px;
 }
 
 #publish-button {
@@ -84,7 +86,7 @@ button:hover {
 
 #main-content {
     margin: auto;
-    /* width: 60%; */
+    width: 60%;
 }
 
 /* .ta-center {
@@ -92,7 +94,7 @@ button:hover {
 } */
 
 #text-input {
-    height: 200px;
+    /* height: 200px; */
     width: 94%;
     margin: 10px 0px;
     border-style: solid;
@@ -121,7 +123,7 @@ li div {
     flex-direction: column; */
     background-color: #fff;
     padding: 15px;
-    min-width: 400px;
+    min-width: 300px;
     border-radius: 10px;
     margin: 10px 10px 10px 0px;
 }
@@ -142,4 +144,22 @@ ul {
     list-style-type: none;
     color: black;
     /* padding: 20px; */
+}
+
+hr {
+}
+
+@media (max-width: 635px) {
+    #main-content {
+        margin: 20px;
+        width: auto;
+    }
+
+    /* li div {
+    width: 90vw;
+    } */
+
+    #mainCardDiv {
+        margin: 10px 0px;
+    }
 }
