--- a/style.css
+++ b/style.css
@@ -5,11 +5,6 @@ html, body {
     margin: 0;
 }
 
-h1 {
-    font-size: 2em;
-    color: #006989;
-}
-
 p {
     font-size: 1.2em;
 }
@@ -59,6 +54,27 @@ button:hover {
     box-shadow: inset 0 -100px 0 0 #006989;
   }
 
+
+#nav-bar {
+    background-color: #e7e7e7;
+    display: flex;
+    justify-content: center;
+}
+
+#nav-bar div {
+    display: flex;
+    justify-content: space-between;
+    gap: 50vw;
+    padding: 10px;
+}
+
+#nav-bar h1 {
+    font-size: 2em;
+    letter-spacing: 6px;
+    color: #006989;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 
 .flex-space-even {
     display: flex;
